load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "github.com/tatsuyayamauchi/golang-test/hello",
    visibility = ["//visibility:private"],
    deps = ["//hello/subpkg1"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)
